commmited changes from deoika and resolves some issuess

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="lemer">MAINTENANCE</string>
     <string name="lent">TIME TABLE</string>
     <string name="lfore">ATTENDANCE</string>
-    <string name="lopd">FEEDBACK/SUGGESTION</string>
+    <string name="lopd">FEEDBACK</string>
     <string name="lgyna">ABOUT</string>
     <string name="lmed">SHARE APP</string>
     <string name="lopth">RATE APP</string>
