--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="phone_number">Phone Number</string>
     <string name="full_name">Full Name</string>
     <string name="user_id">User ID</string>
-    <string name="new_password">New Password</string>
+    <string name="new_password">Password</string>
     <string name="repeat_password">Repeat Password</string>
     <string name="register">Register</string>
 
