--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,6 @@
 <resources>
     <string name="app_name">Easy CST</string>
 
-    <string name="groundbooking">GROUND BOOKING</string>
-    <string name="maintenance">MAINTENANCE</string>
-    <string name="timetable">TIME TABLE</string>
-    <string name="attendance">ATTENDANCE</string>
-    <string name="feedback">FEEDBACK</string>
-    <string name="about">ABOUT</string>
-    <string name="shareapp">SHARE APP</string>
-    <string name="rateapp">RATE APP</string>
-    <string name="help">HELP</string>
     <string name="room_number">Room Number</string>
     <string name="maintenance_registration">Maintenance Registration</string>
     <string name="submit">Submit</string>
@@ -23,16 +14,15 @@
 
 
 <!-- Main Content Label Resources -->
-  
-    <string name="lcom">Easy CST</string>>  
-    <string name="lderm">FOOTBALL</string>
-    <string name="lemer">MAINTENANCE</string>
-    <string name="lent">TIME TABLE</string>
-    <string name="lfore">ATTENDANCE</string>
-    <string name="lopd">FEEDBACK</string>
-    <string name="lgyna">ABOUT</string>
-    <string name="lmed">SHARE APP</string>
-    <string name="lopth">RATE APP</string>
-    <string name="lortho">HELP</string>
+
+    <string name="maintenance">Maintenance</string>
+    <string name="football">Football</string>
+    <string name="timetable">Timetable</string>
+    <string name="attendance">Attendance</string>
+    <string name="feedback">Feedback</string>
+    <string name="about">About</string>
+    <string name="share">Share</string>
+    <string name="rate">Rate</string>
+    <string name="help">Help</string>
 
 </resources>
