--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,14 @@
     <string name="ver_id">Version : 1.0</string>
     <string name="copyrit_id">© 2018 - 2019 All rights reserved</string>
 
+    <!-- rate app -->
+    <string name="install_google_play_store" translatable="false">Please install google play store and then try again.</string>
+    <string name="url_market_details" translatable="false">market://details?id=</string>
+    <string name="url_playstore_app" translatable="false">https://play.google.com/store/apps/details?id=</string>
+    <string name="url_market_search_app" translatable="false">market://search?q=pub:</string>
+    <string name="url_playstore_search_app" translatable="false">http://play.google.com/store/search?q=pub:</string>
+    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=</string>
+
 
 
 
