--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,11 @@
 <resources>
     <string name="app_name">Easy CST</string>
 
-    <string name="room_number">Room Number</string>
-    <string name="maintenance_registration">Maintenance Registration</string>
     <string name="submit">Submit</string>
     <string name="problem">Please describe your problem here.........</string>
-    <string name="phone_number">Phone Number</string>
     <string name="full_name">Full Name</string>
     <string name="user_id">User ID</string>
     <string name="new_password">Password</string>
-    <string name="repeat_password">Repeat Password</string>
     <string name="register">Register</string>
 
     <string name="about_thank">
@@ -24,12 +20,6 @@
         3. Describe the problem related to the room.\n
         4. Click summit.\n
     </string>
-
-
-    <string name="link1"><a style="text-decoration:none" href="link"> Maintenance Registration</a></string>
-    <string name="link2"><a style="text-decoration:none" href="link"> Attendance Tracking</a></string>
-    <string name="link3"><a style="text-decoration:none" href="link"> Feedback</a></string>
-    <string name="link4"><a style="text-decoration:none" href="link"> Timetable</a></string>
 
 
     <!-- Main Content Label Resources -->
@@ -59,15 +49,15 @@
 
     <!-- Main Activity strings -->
     <string name="seven_days_of_the_week">7 Days of the Week</string>
-    <string name="subject">Subject</string>
+    <string name="subject">Module</string>
     <string name="field_error">field can not be empty!</string>
     <string name="time_error">Time field can not be empty!</string>
     <string name="delete">Delete</string>
 
-    <string name="add_subject">Add subject</string>
+    <string name="add_subject">Add Module</string>
     <string name="edit_subject">Edit subject</string>
-    <string name="teacher">Teacher</string>
-    <string name="room">Room</string>
+    <string name="teacher">Tutor</string>
+    <string name="room">Class</string>
     <string name="time">Time</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
@@ -83,7 +73,6 @@
     <string name="choose_color">Choose color</string>
 
     <!-- Homeworks Activity strings -->
-    <string name="homeworks">Homeworks</string>
     <string name="select_date">Select date</string>
     <string name="deadline_dialog">Deadline:</string>
     <string name="description_dialog">Description:</string>
@@ -95,8 +84,6 @@
 
     <!-- Settings Activity strings -->
     <string name="sevendays_setting">Enable 7 Days of the Week</string>
-    <string name="school_website_setting">Change school website</string>
-    <string name="school_website_setting_summary">Change URL of your school website</string>
 
 
     <!--Time Table and HomeWork Strings -->
