--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <!-- Main Content Label Resources -->
 
     <string name="maintenance">Maintenance</string>
-    <string name="football">Football</string>
+    <string name="football">Assignments</string>
     <string name="timetable">Timetable</string>
     <string name="attendance">Attendance</string>
     <string name="feedback">Feedback</string>
@@ -86,8 +86,8 @@
     <string name="sevendays_setting">Enable 7 Days of the Week</string>
     <string name="module">Module</string>
     <string name="tutor">Tutor</string>
-    <string name="time_from">Time from</string>
-    <string name="time_to">Time To</string>
+    <string name="time_from">From</string>
+    <string name="time_to">Till</string>
     <string name="classr">Class</string>
 
 
