--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="delete">Delete</string>
 
     <string name="add_subject">Add Module</string>
-    <string name="edit_subject">Edit subject</string>
+    <string name="edit_subject">Edit Module</string>
     <string name="teacher">Tutor</string>
     <string name="room">Class</string>
     <string name="time">Time</string>
@@ -67,7 +67,6 @@
     <string name="subject_dialog">Module:</string>
     <string name="teacher_dialog">Tutor:</string>
     <string name="room_dialog">Class:</string>
-    <string name="select_time">Select time</string>
     <string name="select_color">Select color</string>
     <string name="choose_time">Choose time</string>
     <string name="choose_date">Choose date</string>
@@ -89,7 +88,7 @@
     <string name="tutor">Tutor</string>
     <string name="time_from">From</string>
     <string name="time_to">Till</string>
-    <string name="classr">Class</string>
+    <string name="classr">Class Room</string>
 
 
     <!--Time Table and HomeWork Strings -->
