--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <!-- Main Content Label Resources -->
 
     <string name="maintenance">Maintenance</string>
-    <string name="football">Assignments</string>
+    <string name="football">Assignment</string>
     <string name="timetable">Timetable</string>
     <string name="attendance">Attendance</string>
     <string name="feedback">Feedback</string>
